use new flexberry-objectlistview control for display list

--- a/app/templates/suggestion-types/page.hbs
+++ b/app/templates/suggestion-types/page.hbs
@@ -1,15 +1,10 @@
 {{
-olv-toolbar
-class = "ui secondary menu"
-modelName = "flexberry-ember-demo-suggestion-type"
-createNewButton = true
-refreshButton = true
+flexberry-objectlistview
 modelController = this
-}}
-{{
-object-list-view
-class = "ui bottom attached"
+modelName = "flexberry-ember-demo-suggestion-type"
 modelProjection = modelProjection
 content = model
-sorting = computedSorting
+
+createNewButton = true
+refreshButton = true
 }}
