--- a/app/templates/users/page.hbs
+++ b/app/templates/users/page.hbs
@@ -1,15 +1,8 @@
 {{
-olv-toolbar
-class = "ui secondary menu"
-modelName = "flexberry-ember-demo-application-user"
-createNewButton = true
-refreshButton = true
+flexberry-objectlistview
 modelController = this
-}}
-{{
-object-list-view
-class = "ui bottom attached"
+modelName = "flexberry-ember-demo-application-user"
 modelProjection = modelProjection
 content = model
-sorting = computedSorting
+refreshButton = true
 }}
