--- a/app/templates/suggestions/page.hbs
+++ b/app/templates/suggestions/page.hbs
@@ -1,15 +1,10 @@
 {{
-olv-toolbar
-class = "ui secondary menu"
-modelName = "flexberry-ember-demo-suggestion"
-createNewButton = true
-refreshButton = true
+flexberry-objectlistview
 modelController = this
-}}
-{{
-object-list-view
-class = "ui bottom attached"
+modelName = "flexberry-ember-demo-suggestion"
 modelProjection = modelProjection
 content = model
-sorting = computedSorting
+
+createNewButton = true
+refreshButton = true
 }}
