Redesign tree structure

--- a/app/templates/suggestion/add-suggestion.hbs
+++ b/app/templates/suggestion/add-suggestion.hbs
@@ -7,7 +7,7 @@
     </div>
     <div class="ten wide column">
         <span style="color:red">{{model.errors.firstName}}</span>
-        {{input type="text" placeholder="(no value)" required=true value=model.Address}}
+        {{input type="text" placeholder="(no value)" required=true value=model.address}}
     </div>
   </div>
 
@@ -17,7 +17,7 @@
     </div>
     <div class="ten wide column">
         <span style="color:red">{{model.errors.firstName}}</span>
-        {{input type="text" placeholder="(no value)" required=true value=model.Text}}
+        {{input type="text" placeholder="(no value)" required=true value=model.text}}
     </div>
   </div>
   
