--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,9 @@
 </div>
 <div class="ui grid page">
     <div class="four wide column">
-      {{render "sitemap" sitemap}}
+		<div class="ui vertical menu">
+			{{render "sitemap" sitemap}}
+		</div>
     </div>
     <div class="twelve wide column">
       {{outlet}}
