Nw generated tree, problem with templeted temporarely resolved by symbolic links (addLinks.sh)

--- a/app/templates/flexberry-ember-demo-application-user-l.hbs
+++ b/app/templates/flexberry-ember-demo-application-user-l.hbs
@@ -20,5 +20,6 @@
 	previousPage = (action "previousPage")
 	gotoPage = (action "gotoPage")
 	nextPage = (action "nextPage")
+	editFormRoute = "flexberry-ember-demo-application-user-e"
 }}
 </div> 
