--- a/app/templates/flexberry-ember-demo-application-user-l.hbs
+++ b/app/templates/flexberry-ember-demo-application-user-l.hbs
@@ -20,5 +20,7 @@
 	previousPage = (action "previousPage")
 	gotoPage = (action "gotoPage")
 	nextPage = (action "nextPage")
+        editFormRoute = "flexberry-ember-demo-application-user-e"
+
 }}
 </div> 
