--- a/app/templates/flexberry-ember-demo-localization-l/loading.hbs
+++ b/app/templates/flexberry-ember-demo-localization-l/loading.hbs
@@ -1,6 +1,6 @@
 <div class="loading-pane">
   <div class="loading-message">
-    Loading ...
+    {{t "forms.loading.spinner-caption"}}
     <div class="spinner"></div>
   </div>
 </div>
